EPBDS-7183 Improve linux scripts for demo
--HG--
branch : 5.21.x